--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,1 +1,6 @@
-<p>button works!</p>
+<button
+    [disabled]="disabled"
+    (click)="handleClick($event)"
+>
+    <ng-content></ng-content>
+</button>
