FT003: Feat - Import Cart component inside Header

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -21,7 +21,7 @@
         <li>
             <div class="account__cart">Cart icon <span>3</span></div>
             <div>
-                <li>Cart component</li>
+                <app-cart />
             </div>
         </li>
         <li>
