FT003: Feat - Show CartItem in Cart component

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -97,7 +97,7 @@
         left: 50%;
         transform: translateX(-50%);
 
-        display: none;
+        // display: none;
     }
 
     & > li > div:first-child:hover + div {
